<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:enabled="false"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_achievement"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_stars_24"
        android:title="@string/title_achievement" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="false"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_profile" />

</menu>