<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.satancros.salehere.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_goal"
        android:name="com.satancros.salehere.ui.goal.GoalFragment"
        android:label="@string/title_goal"
        tools:layout="@layout/fragment_goal" />

    <fragment
        android:id="@+id/navigation_achievement"
        android:name="com.satancros.salehere.ui.achievement.AchievementFragment"
        android:label="@string/title_achievement"
        tools:layout="@layout/fragment_achievement" />
</navigation>